force-app/main/default/objects/Account/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IF(   CONTAINS(Name, &quot;Deloitte&quot;) ,IMAGE(&quot;https://uditsharma-dev-ed--c.ap5.visual.force.com/resource/1528259273000/DLogo?isdtp=p1&quot;, &quot;Deloitte Logo&quot;), &quot;Not Applicable&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>