force-app/main/default/objects/Account/fields/Match_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Match_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If billing and shipping postal codes are same. Used through trigger</description>
    <label>Match Billing Address</label>
    <type>Checkbox</type>
</CustomField>