force-app/main/default/objects/Account/validationRules/Account_Number_8_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_8_Characters</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(AccountNumber) != 8</errorConditionFormula>
    <errorMessage>Account Number must be 8 Characters long</errorMessage>
</ValidationRule>