force-app/main/default/objects/Account/validationRules/Account_Number_is_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_is_Numeric</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNUMBER( AccountNumber )</errorConditionFormula>
    <errorMessage>Account Number should be numeric</errorMessage>
</ValidationRule>