force-app/main/default/objects/Account/validationRules/Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Support_Tier__c , &quot;Gold&quot;) &amp;&amp; ( AnnualRevenue &lt;  $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c  * 20 ),TRUE, FALSE  )</errorConditionFormula>
    <errorMessage>Annual Revenue too low for this support tier</errorMessage>
</ValidationRule>